--- a/travelbuddy/src/SignUp.css
+++ b/travelbuddy/src/SignUp.css
@@ -5,12 +5,24 @@
     background-color: #ffffff;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form-header-group{
+
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
 }
 
 /* Style for the form inside the container */
 .login-form {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 /* Header of the form */
@@ -25,6 +37,7 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 15px;
+    width: 100%;
 }
 
 /* Label for the input fields */
