--- a/travelbuddy/src/PersonalizationForm.css
+++ b/travelbuddy/src/PersonalizationForm.css
@@ -1,23 +1,18 @@
 /* Add a background image to the body */
 
-body {
-    font-family: Arial, sans-serif;
-    background-size: cover; /* Ensures the image covers the whole background */
-    background-position: center; /* Centers the image */
-    background-attachment: fixed; /* Keeps the background fixed when scrolling */
-    background-repeat: no-repeat; /* Prevents the image from repeating */
-    min-height: 100vh; /* Ensures the body takes up the full viewport height */
-    margin: 0;
+/* Container styling */
+
+.personalization{
     background-image: url('/public/imgs/beachFrontCity.jpeg');
-    height: 100%;
-    width: 100%;
-    background-position: center;
+    width: 100vw;
     background-repeat: no-repeat;
     background-size: cover;
-
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-/* Container styling */
 .container {
     width: 90%;
     margin: 0 auto;
