--- a/travelbuddy/src/Dashboard.css
+++ b/travelbuddy/src/Dashboard.css
@@ -1,9 +1,21 @@
-.dashboard-container{
-
-    width: 100%;
-    height: 100%;
+/* Dashboard.css */
+.dashboard-container {
+    width: 100vw; /* Ensure full width of the viewport */
+    height: 100vh; /* Full height of the viewport */
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
+}
 
+.dashboard-navbar {
+    flex: 0;
+    display: flex;
+    justify-content: flex-start; /* Align the hamburger to the left */
+    padding: 10px 20px;
+}
+
+.challenges-container {
+    flex: 1;
+    display: flex;
+    justify-content: center; /* Centers the challenge cards horizontally */
+    align-items: center; /* Centers the challenge cards vertically */
 }
