Got navbar working

--- a/travelbuddy/src/Dashboard.css
+++ b/travelbuddy/src/Dashboard.css
@@ -1,16 +1,9 @@
 /* Dashboard.css */
 .dashboard-container {
     width: 100vw; /* Ensure full width of the viewport */
-    height: 100vh; /* Full height of the viewport */
+    height: calc(100vh); /* Full height of the viewport */
     display: flex;
     flex-direction: column;
-}
-
-.dashboard-navbar {
-    flex: 0;
-    display: flex;
-    justify-content: flex-start; /* Align the hamburger to the left */
-    padding: 10px 20px;
 }
 
 .challenges-container {
