--- a/travelbuddy/src/Dashboard.css
+++ b/travelbuddy/src/Dashboard.css
@@ -1,14 +1,38 @@
 /* Dashboard.css */
 .dashboard-container {
-    width: 100vw; /* Ensure full width of the viewport */
+    background-image: url('/public/imgs/lakeMountains.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100vw; /* Ensure full width of the viewport */   
     height: calc(100vh); /* Full height of the viewport */
     display: flex;
     flex-direction: column;
 }
 
+.challenges-header {
+    font-size: 4em;
+    font-family: 'Georgia', serif;
+    color:  #fef9e7;
+    padding: 20px 20px;
+    background-color: rgba(247, 209, 163, .4);
+    border-radius: 7px;
+    /* text-decoration: underline #ffffff; */
+    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+}
+
+.challenges-header-and-container{
+    display: flex;
+    flex-direction: column;
+    margin: 0px 150px;
+    justify-content: center;
+    align-items: center;
+}
+
 .challenges-container {
+    width: 100%;
     flex: 1;
     display: flex;
-    justify-content: center; /* Centers the challenge cards horizontally */
+    flex-wrap: wrap;
+    justify-content: space-between; /* Centers the challenge cards horizontally */
     align-items: center; /* Centers the challenge cards vertically */
 }
