tried modifying profile

--- a/travelbuddy/src/Dashboard.css
+++ b/travelbuddy/src/Dashboard.css
@@ -1,7 +1,7 @@
 /* Dashboard.css */
 .dashboard-container {
     background-image: url('/public/imgs/lakeMountains.jpeg');
-    background-repeat: no-repeat;
+    background-repeat:repeat-y;
     background-size: cover;
     width: 100vw; /* Ensure full width of the viewport */   
     height: calc(100vh); /* Full height of the viewport */
