--- a/travelbuddy/src/Navbar.css
+++ b/travelbuddy/src/Navbar.css
@@ -20,11 +20,14 @@
 
 .navbar ul li {
     margin: 0 20px; /* Adjust as needed */
+    background-color: rgba(247, 209, 163, .4);
+    border-radius: 7px;
+    padding: 10px 20px;
 }
 
 .navbar ul li a{
     text-decoration: none;
-    color: black;
+    color: #fef9e7;
 }
 
 .navbar img {
