--- a/travelbuddy/src/PersonalizationForm.css
+++ b/travelbuddy/src/PersonalizationForm.css
@@ -13,7 +13,7 @@
     justify-content: center;
 }
 
-.container {
+.form-container {
     width: 90%;
     margin: 0 auto;
     max-width: 600px;
@@ -21,6 +21,11 @@
     padding: 20px;
     border-radius: 10px; /* Adds rounded corners to the form */
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); /* Adds a subtle shadow for depth */
+}
+
+.Navbar-header{
+    width: 100vw;
+    
 }
 
 h2 {
