--- a/travelbuddy/src/Dashboard.css
+++ b/travelbuddy/src/Dashboard.css
@@ -60,7 +60,24 @@
     cursor: pointer;
 }
 
+.complete-button {
+    display: block;
+    margin: 10px auto;
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+
+
 .confirm-button:hover {
+    background-color: #45a049;
+}
+
+.complete-button:hover {
     background-color: #45a049;
 }
 
@@ -74,4 +91,27 @@
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.challenge-qr-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(254, 249, 231, 0.2);
+    padding: 0px 40px;
+    border-radius: 10px;
+
+}
+
+.qr-code-container{
+    margin: 0px 30px;
+    width: 100px;
+    height: auto;
+
+}
+
+.qr-code{
+
+    background-color: rgba(254, 249, 231, 1);
+    padding: 10px 10px;
 }
