--- a/travelbuddy/src/Dashboard.css
+++ b/travelbuddy/src/Dashboard.css
@@ -10,6 +10,7 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    overflow-y: hidden;
 }
 
 
@@ -61,7 +62,7 @@
 
 .complete-button {
     display: block;
-    margin: 10px auto;
+    margin: 0px auto;
     padding: 10px 20px;
     background-color: #4CAF50;
     color: white;
