--- a/travelbuddy/src/Dashboard.css
+++ b/travelbuddy/src/Dashboard.css
@@ -20,6 +20,7 @@
     color:  #fef9e7;
     padding: 20px 20px;
     background-color: rgba(247, 209, 163, .4);
+    border: 1px solid #ccc; /* Border for separation */
     border-radius: 7px;
     box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
 }
