--- a/travelbuddy/src/Dashboard.css
+++ b/travelbuddy/src/Dashboard.css
@@ -116,3 +116,41 @@
     background-color: rgba(254, 249, 231, 1);
     padding: 10px 10px;
 }
+
+.location-container {
+    position: absolute;
+    bottom: 20px; /* Distance from the bottom of the screen */
+    left: 20px; /* Distance from the left of the screen */
+    display: flex;
+    align-items: center;
+    gap: 10px; /* Space between the button and the location info */
+}
+
+.location-button {
+    background-color: rgba(255, 255, 255, 0.9);
+    background-image: url('/public/imgs/location.png'); /* Replace with the actual path to your image */
+    background-size: 40px 40px; /* Adjust the size of the icon */
+    background-repeat: no-repeat;
+    background-position: center;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    padding: 10px;
+    width: 50px;
+    height: 50px;
+    transition: background-color 0.3s;
+}
+
+.location-button:hover {
+    background-color: #d4a373;
+}
+
+.location-info {
+    font-size: 1.1em;
+    background-color: rgba(255, 255, 255, 0.9);
+    border: 2px solid #d4a373;
+    border-radius: 5px;
+    padding: 5px 5px;
+    color: #333;
+    font-family: 'Georgia', serif;
+}
